--- a/MODAMSWeb/Resources/Views/Shared/layouts/_app-header.so.resx
+++ b/MODAMSWeb/Resources/Views/Shared/layouts/_app-header.so.resx
@@ -117,13 +117,55 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Dashboard" xml:space="preserve">
-    <value>Dashboard</value>
+  <data name="Categories" xml:space="preserve">
+    <value>Deeq-bixiyeyaasha</value>
+  </data>
+  <data name="Departments" xml:space="preserve">
+    <value>Waaxaha</value>
+  </data>
+  <data name="Disposals" xml:space="preserve">
+    <value>Ka-takhalusid</value>
+  </data>
+  <data name="Donors" xml:space="preserve">
+    <value>Deeq-bixiyeyaasha</value>
   </data>
   <data name="Employees" xml:space="preserve">
-    <value>Employees</value>
+    <value>Shaqaalaha</value>
   </data>
-  <data name="WelcomeMessage" xml:space="preserve">
-    <value>Welcome to the System</value>
+  <data name="English" xml:space="preserve">
+    <value>Ingiriis</value>
+  </data>
+  <data name="Logout" xml:space="preserve">
+    <value>Ka bax</value>
+  </data>
+  <data name="Notifications" xml:space="preserve">
+    <value>Ogeysiisyo</value>
+  </data>
+  <data name="Profile" xml:space="preserve">
+    <value>Astaanta</value>
+  </data>
+  <data name="Reports" xml:space="preserve">
+    <value>Warbixinno</value>
+  </data>
+  <data name="ScanBarcode" xml:space="preserve">
+    <value>Ka saaq Barcode</value>
+  </data>
+  <data name="Settings" xml:space="preserve">
+    <value>Dejinta</value>
+  </data>
+  <data name="Somali" xml:space="preserve">
+    <value>Soomaali</value>
+  </data>
+  <data name="Stores" xml:space="preserve">
+    <value>Bakahaarro</value>
+  </data>
+  <data name="Transfers" xml:space="preserve">
+    <value>Wareejin</value>
+  </data>
+  <data name="Verifications" xml:space="preserve">
+    <value>Xaqiin</value>
+  </data>
+  <data name="ViewAllNotifications" xml:space="preserve">
+    <value>Eeg Dhammaan Ogeysiisyada</value>
   </data>
 </root>
