--- a/MODAMSWeb/Resources/Areas/Users/Views/Home/Index.so.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Home/Index.so.resx
@@ -153,4 +153,22 @@
   <data name="Reporting" xml:space="preserve">
     <value>Ka-warbixin</value>
   </data>
+  <data name="Category" xml:space="preserve">
+    <value>Nooc</value>
+  </data>
+  <data name="NumberOfAssets" xml:space="preserve">
+    <value>Tirada Hantida</value>
+  </data>
+  <data name="TotalCost" xml:space="preserve">
+    <value>Wadarta Kharashka</value>
+  </data>
+  <data name="TotalAssets" xml:space="preserve">
+    <value>Wadarta Hantida</value>
+  </data>
+  <data name="CurrentValue" xml:space="preserve">
+    <value>Qiimaha Waqtiga</value>
+  </data>
+  <data name="TotalStores" xml:space="preserve">
+    <value>Wadarta Bakhaarrada</value>
+  </data>
 </root>
