--- a/MODAMSWeb/Resources/Areas/Users/Views/Home/Index.en.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Home/Index.en.resx
@@ -171,4 +171,10 @@
   <data name="TotalStores" xml:space="preserve">
     <value>Total Stores</value>
   </data>
+  <data name="Count" xml:space="preserve">
+    <value>Count</value>
+  </data>
+  <data name="Cost" xml:space="preserve">
+    <value>Cost</value>
+  </data>
 </root>
