--- a/MODAMSWeb/Resources/Areas/Users/Views/Assets/AssetList.so.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Assets/AssetList.so.resx
@@ -124,7 +124,7 @@
     <value>Magaca Hantida</value>
   </data>
   <data name="Category" xml:space="preserve">
-    <value>Nooc</value>
+    <value>Qayb</value>
   </data>
   <data name="Count" xml:space="preserve">
     <value>Tirin</value>
