--- a/MODAMSWeb/Resources/Areas/Users/Views/Home/Index.so.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Home/Index.so.resx
@@ -154,7 +154,7 @@
     <value>Ka-warbixin</value>
   </data>
   <data name="Category" xml:space="preserve">
-    <value>Nooc</value>
+    <value>Qayb</value>
   </data>
   <data name="NumberOfAssets" xml:space="preserve">
     <value>Tirada Hantida</value>
