--- a/MODAMSWeb/Resources/Areas/Users/Views/Assets/EditAsset.en.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Assets/EditAsset.en.resx
@@ -120,26 +120,11 @@
   <data name="AssetCategory" xml:space="preserve">
     <value>Asset Category</value>
   </data>
-  <data name="AssetDocuments" xml:space="preserve">
-    <value>Asset Documents</value>
-  </data>
-  <data name="AssetHistory" xml:space="preserve">
-    <value>Asset History</value>
-  </data>
   <data name="AssetInformation" xml:space="preserve">
     <value>Asset Information</value>
   </data>
   <data name="AssetName" xml:space="preserve">
     <value>Asset Name</value>
-  </data>
-  <data name="AssetPictureGallery" xml:space="preserve">
-    <value>Asset Picture Gallery</value>
-  </data>
-  <data name="AssetRegisteredBy" xml:space="preserve">
-    <value>Asset Registered By</value>
-  </data>
-  <data name="AssetUsage" xml:space="preserve">
-    <value>Asset Usage</value>
   </data>
   <data name="Barcode" xml:space="preserve">
     <value>Barcode</value>
@@ -159,20 +144,8 @@
   <data name="DepartmentName" xml:space="preserve">
     <value>Department Name</value>
   </data>
-  <data name="Documents" xml:space="preserve">
-    <value>Documents</value>
-  </data>
   <data name="Donor" xml:space="preserve">
     <value>Donor</value>
-  </data>
-  <data name="DownloadLink" xml:space="preserve">
-    <value>Download Link</value>
-  </data>
-  <data name="EditDocuments" xml:space="preserve">
-    <value>Edit Documents</value>
-  </data>
-  <data name="EditPictures" xml:space="preserve">
-    <value>Edit Pictures</value>
   </data>
   <data name="InitialCost" xml:space="preserve">
     <value>Initial Cost</value>
@@ -189,12 +162,6 @@
   <data name="NoDataAvailable" xml:space="preserve">
     <value>No data available</value>
   </data>
-  <data name="Overview" xml:space="preserve">
-    <value>Overview</value>
-  </data>
-  <data name="Pictures" xml:space="preserve">
-    <value>Pictures</value>
-  </data>
   <data name="PONumber" xml:space="preserve">
     <value>Purchase Order Number</value>
   </data>
@@ -207,13 +174,13 @@
   <data name="PurchaseDate" xml:space="preserve">
     <value>Purchase Date</value>
   </data>
-  <data name="ReceiptDate" xml:space="preserve">
-    <value>Receipt Date</value>
+  <data name="RecieptDate" xml:space="preserve">
+    <value>RecieptDate</value>
   </data>
   <data name="Remarks" xml:space="preserve">
     <value>Remarks</value>
   </data>
-  <data name="SerialNumber" xml:space="preserve">
+  <data name="SerialNo" xml:space="preserve">
     <value>Serial Number</value>
   </data>
   <data name="Status" xml:space="preserve">
@@ -225,16 +192,49 @@
   <data name="Year" xml:space="preserve">
     <value>Year</value>
   </data>
-  <data name="EngineNumber" xml:space="preserve">
+  <data name="Engine" xml:space="preserve">
     <value>Engine Number</value>
   </data>
-  <data name="ChasisNumber" xml:space="preserve">
+  <data name="Chasis" xml:space="preserve">
     <value>Chasis Number</value>
   </data>
-  <data name="PlateNumber" xml:space="preserve">
+  <data name="Plate" xml:space="preserve">
     <value>Plate Number</value>
   </data>
-  <data name="DocumentName" xml:space="preserve">
-    <value>Document Name</value>
+  <data name="Cost" xml:space="preserve">
+    <value>Cost</value>
+  </data>
+  <data name="SaveAsset" xml:space="preserve">
+    <value>Save Asset</value>
+  </data>
+  <data name="SubCategory" xml:space="preserve">
+    <value>Sub-Category</value>
+  </data>
+  <data name="NewAsset" xml:space="preserve">
+    <value>New Asset</value>
+  </data>
+  <data name="AssetDetails" xml:space="preserve">
+    <value>Asset Details</value>
+  </data>
+  <data name="SelectSubCategory" xml:space="preserve">
+    <value>Select Sub-Category</value>
+  </data>
+  <data name="SelectProcurementEntity" xml:space="preserve">
+    <value>Select Procurement Entity</value>
+  </data>
+  <data name="SelectDonor" xml:space="preserve">
+    <value>Select Donor</value>
+  </data>
+  <data name="SelectCondition" xml:space="preserve">
+    <value>Select Condition</value>
+  </data>
+  <data name="SelectCategory" xml:space="preserve">
+    <value>Select Category</value>
+  </data>
+  <data name="SaveChanges" xml:space="preserve">
+    <value>Save Changes</value>
+  </data>
+  <data name="EditAsset" xml:space="preserve">
+    <value>Edit Asset Details</value>
   </data>
 </root>
