--- a/MODAMSWeb/Resources/Areas/Users/Views/Assets/AssetInfo.so.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Assets/AssetInfo.so.resx
@@ -237,4 +237,7 @@
   <data name="DocumentName" xml:space="preserve">
     <value>Magaca Dukumentiga</value>
   </data>
+  <data name="Download" xml:space="preserve">
+    <value>Soo dejiso</value>
+  </data>
 </root>
