--- a/MODAMSWeb/Resources/Areas/Users/Views/Transfers/CreateTransfer.so.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Transfers/CreateTransfer.so.resx
@@ -117,76 +117,49 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Action" xml:space="preserve">
-    <value>Tallaabo-qaad</value>
-  </data>
-  <data name="AllTransfers" xml:space="preserve">
-    <value>Dhammaan wareejinta</value>
-  </data>
-  <data name="Assets" xml:space="preserve">
-    <value>Hantida</value>
-  </data>
-  <data name="AssetsReceived" xml:space="preserve">
-    <value>Hantida La heley</value>
-  </data>
-  <data name="AssetsTransferred" xml:space="preserve">
-    <value>Hantida La wareejiyey</value>
+  <data name="AssetName" xml:space="preserve">
+    <value>Nooca Hantida</value>
   </data>
   <data name="AssetTransfers" xml:space="preserve">
     <value>Hanti Wareejin</value>
   </data>
-  <data name="AwaitingAcknowledgement" xml:space="preserve">
-    <value>Sugeysa aqbalaad</value>
+  <data name="Barcode" xml:space="preserve">
+    <value>Barcode-ka</value>
   </data>
-  <data name="Completed" xml:space="preserve">
-    <value>La-dhammeystirey</value>
+  <data name="Category" xml:space="preserve">
+    <value>Qayb</value>
   </data>
-  <data name="Count" xml:space="preserve">
-    <value>Tiri</value>
+  <data name="CreateNewTransfer" xml:space="preserve">
+    <value>Abuur Wareejin Cusub</value>
   </data>
-  <data name="Date" xml:space="preserve">
-    <value>Taariikhda</value>
+  <data name="Make" xml:space="preserve">
+    <value>Sharikadda Sameysey</value>
   </data>
-  <data name="EditTransfer" xml:space="preserve">
-    <value>Tafatir Wareejinta</value>
-  </data>
-  <data name="IncomingTransfers" xml:space="preserve">
-    <value>Soo wareejin</value>
-  </data>
-  <data name="IncomingTransfersByCategory" xml:space="preserve">
-    <value>Soo-wareejinta oo ku saleysan Nooc</value>
-  </data>
-  <data name="NewTransfer" xml:space="preserve">
-    <value>Wareejin Cusub</value>
-  </data>
-  <data name="OutgoingTransfers" xml:space="preserve">
-    <value>Sii wareejin</value>
-  </data>
-  <data name="OutgoingTransfersByCategory" xml:space="preserve">
-    <value>Sii-wareejinta oo ku saleysan Nooc</value>
-  </data>
-  <data name="Pending" xml:space="preserve">
-    <value>Weli Taagan</value>
-  </data>
-  <data name="PreviewTransfer" xml:space="preserve">
-    <value>Sii-eeg Wareejinta</value>
+  <data name="Model" xml:space="preserve">
+    <value>Model-ka</value>
   </data>
   <data name="Previous" xml:space="preserve">
     <value>Hore</value>
   </data>
-  <data name="Rejected" xml:space="preserve">
-    <value>La-diidey</value>
+  <data name="SaveTransfer" xml:space="preserve">
+    <value>Keydi Wareejinta</value>
   </data>
-  <data name="Status" xml:space="preserve">
-    <value>Heerka</value>
+  <data name="SelectAssets" xml:space="preserve">
+    <value>Xulo Hantida</value>
   </data>
-  <data name="StoreFrom" xml:space="preserve">
-    <value>Bakhaarka ay ka timid</value>
+  <data name="Selected" xml:space="preserve">
+    <value>La Xushay</value>
   </data>
-  <data name="StoreTo" xml:space="preserve">
-    <value>Bakhaarka ay u socoto</value>
+  <data name="SelectStore" xml:space="preserve">
+    <value>Xulo Dukaanka</value>
   </data>
-  <data name="Value" xml:space="preserve">
-    <value>Qiime</value>
+  <data name="SerialNo" xml:space="preserve">
+    <value>Tirada Taxan</value>
+  </data>
+  <data name="TransferNotes" xml:space="preserve">
+    <value>Qoraalada Wareejinta</value>
+  </data>
+  <data name="YourSelection" xml:space="preserve">
+    <value>Xulashadaada</value>
   </data>
 </root>
