localizing store names stage 1

--- a/MODAMSWeb/Resources/Areas/Users/Views/Stores/Index.en.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Stores/Index.en.resx
@@ -132,6 +132,9 @@
   <data name="Members" xml:space="preserve">
     <value>Members</value>
   </data>
+  <data name="NoStoresAvailable" xml:space="preserve">
+    <value>No stores available!</value>
+  </data>
   <data name="Previous" xml:space="preserve">
     <value>Previous</value>
   </data>
